# img-wasteof-bot

./: .gitignore  Cargo.toml  README.MD
src/: main.rs
