[package]
name = "img-wasteof-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.16", features = ["json"] }
rust_socketio = { version = "0.4.1-alpha.1", features = ["async"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.27.0", features = ["macros"] }
toml = "0.7.3"
